--- a/quickshell/translations/poexports/it.json
+++ b/quickshell/translations/poexports/it.json
@@ -2,6 +2,12 @@
   "%1 characters": {
     "%1 characters": "%1 caratteri"
   },
+  "%1 display(s)": {
+    "%1 display(s)": ""
+  },
+  "%1 widgets": {
+    "%1 widgets": ""
+  },
   "(Unnamed)": {
     "(Unnamed)": "(Senza nome)"
   },
@@ -46,6 +52,9 @@
   },
   "Add": {
     "Add": "Aggiungi"
+  },
+  "Add Bar": {
+    "Add Bar": ""
   },
   "Add Widget": {
     "Add Widget": "Aggiungi Widget"
@@ -227,6 +236,12 @@
   "Balanced palette with focused accents (default).": {
     "Balanced palette with focused accents (default).": "Tavolozza bilanciata con accenti focalizzati (default)."
   },
+  "Bar Configurations": {
+    "Bar Configurations": ""
+  },
+  "Bar Transparency": {
+    "Bar Transparency": ""
+  },
   "Battery": {
     "Battery": "Batteria"
   },
@@ -276,7 +291,7 @@
     "Brightness": "Luminosità"
   },
   "Brightness OSD": {
-    "Brightness OSD": ""
+    "Brightness OSD": "OSD Luminosità"
   },
   "Browse": {
     "Browse": "Sfoglia"
@@ -318,7 +333,7 @@
     "Caps Lock Indicator": "Indicatore Maiuscolo"
   },
   "Caps Lock OSD": {
-    "Caps Lock OSD": ""
+    "Caps Lock OSD": "OSD Maiuscolo"
   },
   "Center Section": {
     "Center Section": "Sezione Centrale"
@@ -326,17 +341,26 @@
   "Center Tiling": {
     "Center Tiling": "Tiling Centrale"
   },
+  "Change bar appearance": {
+    "Change bar appearance": ""
+  },
   "Changes:": {
     "Changes:": "Modifiche:"
   },
   "Check for system updates": {
     "Check for system updates": "Controlla aggiornamenti di sistema"
   },
+  "Choose Color": {
+    "Choose Color": ""
+  },
   "Choose Launcher Logo Color": {
     "Choose Launcher Logo Color": "Scegli Colore Logo Launcher"
   },
   "Choose icon": {
     "Choose icon": "Scegli icona"
+  },
+  "Choose the background color for widgets": {
+    "Choose the background color for widgets": ""
   },
   "Choose the border accent color": {
     "Choose the border accent color": "Scegli il colore di accento dei bordi"
@@ -348,7 +372,7 @@
     "Choose where notification popups appear on screen": "Scegli dove i popup delle notifiche appaiono sullo schermo"
   },
   "Choose where on-screen displays appear on screen": {
-    "Choose where on-screen displays appear on screen": ""
+    "Choose where on-screen displays appear on screen": "Scegli dove i messaggi appaiono sullo schermo"
   },
   "Clear": {
     "Clear": "Pulisci"
@@ -373,6 +397,9 @@
   },
   "Close": {
     "Close": "Chiudi"
+  },
+  "Close Overview on Launch": {
+    "Close Overview on Launch": ""
   },
   "Color Override": {
     "Color Override": "Sostituzione Colore"
@@ -626,6 +653,9 @@
   "Dismiss": {
     "Dismiss": "Dismetti"
   },
+  "Display Assignment": {
+    "Display Assignment": ""
+  },
   "Display Name Format": {
     "Display Name Format": ""
   },
@@ -707,6 +737,9 @@
   "Enable Autoconnect": {
     "Enable Autoconnect": "Abilita connessione automatica"
   },
+  "Enable Bar": {
+    "Enable Bar": ""
+  },
   "Enable GPU Temperature": {
     "Enable GPU Temperature": "Abilita Temperatura GPU"
   },
@@ -765,7 +798,7 @@
     "Enter password for ": "Inserisci password per"
   },
   "Enter this passkey on ": {
-    "Enter this passkey on ": ""
+    "Enter this passkey on ": "Inserisci questa passkey su "
   },
   "Error": {
     "Error": "Errore"
@@ -1001,6 +1034,9 @@
   "Individual Batteries": {
     "Individual Batteries": "Batterie Individuali"
   },
+  "Individual bar configuration": {
+    "Individual bar configuration": ""
+  },
   "Inhibit idle timeout when audio or video is playing": {
     "Inhibit idle timeout when audio or video is playing": "Impedisci tempo inattività quando audio o video sono in riproduzione"
   },
@@ -1028,8 +1064,14 @@
   "Jobs: ": {
     "Jobs: ": "Lavori:"
   },
+  "Keep Awake": {
+    "Keep Awake": ""
+  },
   "Keep Changes": {
     "Keep Changes": "Conserva Modifiche"
+  },
+  "Keeping Awake": {
+    "Keeping Awake": ""
   },
   "Keyboard Layout Name": {
     "Keyboard Layout Name": "Nome Layout Tastiera"
@@ -1121,6 +1163,9 @@
   "Manage and configure plugins for extending DMS functionality": {
     "Manage and configure plugins for extending DMS functionality": "Gestione e configurazione plugins per estendere le funzionalità di DMS"
   },
+  "Manage up to 4 independent bar configurations. Each bar has its own position, widgets, styling, and display assignment.": {
+    "Manage up to 4 independent bar configurations. Each bar has its own position, widgets, styling, and display assignment.": ""
+  },
   "Manual Coordinates": {
     "Manual Coordinates": "Coordinate Manuali"
   },
@@ -1184,6 +1229,9 @@
   "Media Players (": {
     "Media Players (": "Media Players ("
   },
+  "Media Volume OSD": {
+    "Media Volume OSD": ""
+  },
   "Memory": {
     "Memory": "Memoria"
   },
@@ -1198,6 +1246,9 @@
   },
   "Microphone Mute OSD": {
     "Microphone Mute OSD": ""
+  },
+  "Middle Section": {
+    "Middle Section": ""
   },
   "Minimal palette built around a single hue.": {
     "Minimal palette built around a single hue.": "Tavolozza minima costruita attorno a una singola tonalità."
@@ -1368,7 +1419,7 @@
     "OS Logo": "Logo OS"
   },
   "OSD Position": {
-    "OSD Position": ""
+    "OSD Position": "Posizione OSD"
   },
   "Office": {
     "Office": "Ufficio"
@@ -1530,7 +1581,7 @@
     "Power Profile Degradation": "Degradamento profilo energetico"
   },
   "Power Profile OSD": {
-    "Power Profile OSD": ""
+    "Power Profile OSD": "OSD Profilo Alimentazione"
   },
   "Pressure": {
     "Pressure": "Pressione"
@@ -1669,6 +1720,9 @@
   },
   "Save Notepad File": {
     "Save Notepad File": "Salva File Notepad"
+  },
+  "Save password": {
+    "Save password": ""
   },
   "Saved": {
     "Saved": "Salvato"
@@ -1821,22 +1875,25 @@
     "Show on screens:": "Mostra sullo schermo:"
   },
   "Show on-screen display when brightness changes": {
-    "Show on-screen display when brightness changes": ""
+    "Show on-screen display when brightness changes": "Visualizza un messaggio a schermo quando la luminosità cambia"
   },
   "Show on-screen display when caps lock state changes": {
-    "Show on-screen display when caps lock state changes": ""
+    "Show on-screen display when caps lock state changes": "Visualizza un messaggio a schermo quando lo stato del maiuscolo cambia"
   },
   "Show on-screen display when idle inhibitor state changes": {
     "Show on-screen display when idle inhibitor state changes": ""
   },
+  "Show on-screen display when media player volume changes": {
+    "Show on-screen display when media player volume changes": ""
+  },
   "Show on-screen display when microphone is muted/unmuted": {
-    "Show on-screen display when microphone is muted/unmuted": ""
+    "Show on-screen display when microphone is muted/unmuted": "Visualizza un messaggio a schermo quando il microfono è mutato/aperto"
   },
   "Show on-screen display when power profile changes": {
-    "Show on-screen display when power profile changes": ""
+    "Show on-screen display when power profile changes": "Visualizza un messaggio a schermo quando il profilo di alimentazione cambia "
   },
   "Show on-screen display when volume changes": {
-    "Show on-screen display when volume changes": ""
+    "Show on-screen display when volume changes": "Visualizza un messaggio a schermo quando il volume cambia"
   },
   "Show only apps running in current workspace": {
     "Show only apps running in current workspace": "Mostra solo apps eseguite nel workspace attuale"
@@ -2051,6 +2108,9 @@
   "Toggle top bar visibility manually (can be controlled via IPC)": {
     "Toggle top bar visibility manually (can be controlled via IPC)": "Cambia manualmente visibiltà barra superiore (può essere controllata via IPC)"
   },
+  "Toggle visibility of this bar configuration": {
+    "Toggle visibility of this bar configuration": ""
+  },
   "Tomorrow": {
     "Tomorrow": "Domani"
   },
@@ -2199,7 +2259,7 @@
     "Volume Changed": "Volume Cambiato"
   },
   "Volume OSD": {
-    "Volume OSD": ""
+    "Volume OSD": "OSD Volume"
   },
   "Volume, brightness, and other system OSDs": {
     "Volume, brightness, and other system OSDs": "Volume, luminosità, e altri OSD di sistema"
@@ -2240,11 +2300,20 @@
   "WiFi is off": {
     "WiFi is off": "WiFi spento"
   },
+  "Widget Background Color": {
+    "Widget Background Color": ""
+  },
   "Widget Management": {
     "Widget Management": "Gestione Widget"
   },
+  "Widget Style": {
+    "Widget Style": ""
+  },
   "Widget Styling": {
     "Widget Styling": "Widget Styling"
+  },
+  "Widget Transparency": {
+    "Widget Transparency": ""
   },
   "Widgets": {
     "Widgets": "Widgets"
@@ -2279,6 +2348,12 @@
   "You have unsaved changes. Save before opening a file?": {
     "You have unsaved changes. Save before opening a file?": "Ci sono modifiche non salvate. Salvare prima di aprire un file?"
   },
+  "custom theme file browser title": {
+    "Select Custom Theme": ""
+  },
+  "dark mode wallpaper file browser title | light mode wallpaper file browser title | wallpaper file browser title": {
+    "Select Wallpaper": ""
+  },
   "events": {
     "events": "eventi"
   },
@@ -2291,8 +2366,20 @@
   "official": {
     "official": "ufficiale"
   },
+  "profile image file browser title": {
+    "Select Profile Image": ""
+  },
+  "settings window title": {
+    "Settings": ""
+  },
+  "sysmon window title": {
+    "System Monitor": ""
+  },
   "update dms for NM integration.": {
     "update dms for NM integration.": "aggiorna dms per integrazione NM"
+  },
+  "wallpaper directory file browser title": {
+    "Select Wallpaper Directory": ""
   },
   "• Install only from trusted sources": {
     "• Install only from trusted sources": "• Installa solo da sorgenti fidate"
