--- a/quickshell/translations/poexports/zh_CN.json
+++ b/quickshell/translations/poexports/zh_CN.json
@@ -2,6 +2,12 @@
   "%1 characters": {
     "%1 characters": "%1个字符"
   },
+  "%1 display(s)": {
+    "%1 display(s)": ""
+  },
+  "%1 widgets": {
+    "%1 widgets": ""
+  },
   "(Unnamed)": {
     "(Unnamed)": "(未命名)"
   },
@@ -46,6 +52,9 @@
   },
   "Add": {
     "Add": "添加"
+  },
+  "Add Bar": {
+    "Add Bar": ""
   },
   "Add Widget": {
     "Add Widget": "添加小组件"
@@ -227,6 +236,12 @@
   "Balanced palette with focused accents (default).": {
     "Balanced palette with focused accents (default).": "均衡配色，强调重点（默认）"
   },
+  "Bar Configurations": {
+    "Bar Configurations": ""
+  },
+  "Bar Transparency": {
+    "Bar Transparency": ""
+  },
   "Battery": {
     "Battery": "电池"
   },
@@ -326,17 +341,26 @@
   "Center Tiling": {
     "Center Tiling": "中心平铺"
   },
+  "Change bar appearance": {
+    "Change bar appearance": ""
+  },
   "Changes:": {
     "Changes:": "更改:"
   },
   "Check for system updates": {
     "Check for system updates": "检查系统更新"
   },
+  "Choose Color": {
+    "Choose Color": ""
+  },
   "Choose Launcher Logo Color": {
     "Choose Launcher Logo Color": "设置启动器 Logo 颜色"
   },
   "Choose icon": {
     "Choose icon": "选择图标"
+  },
+  "Choose the background color for widgets": {
+    "Choose the background color for widgets": ""
   },
   "Choose the border accent color": {
     "Choose the border accent color": "选择边框强调色"
@@ -373,6 +397,9 @@
   },
   "Close": {
     "Close": "关闭"
+  },
+  "Close Overview on Launch": {
+    "Close Overview on Launch": ""
   },
   "Color Override": {
     "Color Override": "覆盖颜色"
@@ -626,6 +653,9 @@
   "Dismiss": {
     "Dismiss": "忽略"
   },
+  "Display Assignment": {
+    "Display Assignment": ""
+  },
   "Display Name Format": {
     "Display Name Format": "显示名称格式"
   },
@@ -706,6 +736,9 @@
   },
   "Enable Autoconnect": {
     "Enable Autoconnect": "启用自动连接"
+  },
+  "Enable Bar": {
+    "Enable Bar": ""
   },
   "Enable GPU Temperature": {
     "Enable GPU Temperature": "显示 GPU 温度"
@@ -1001,6 +1034,9 @@
   "Individual Batteries": {
     "Individual Batteries": "分别显示电池"
   },
+  "Individual bar configuration": {
+    "Individual bar configuration": ""
+  },
   "Inhibit idle timeout when audio or video is playing": {
     "Inhibit idle timeout when audio or video is playing": "在播放音频或视频时，禁止待机超时"
   },
@@ -1028,8 +1064,14 @@
   "Jobs: ": {
     "Jobs: ": "任务： "
   },
+  "Keep Awake": {
+    "Keep Awake": ""
+  },
   "Keep Changes": {
     "Keep Changes": "保持更改"
+  },
+  "Keeping Awake": {
+    "Keeping Awake": ""
   },
   "Keyboard Layout Name": {
     "Keyboard Layout Name": "键盘布局名称"
@@ -1121,6 +1163,9 @@
   "Manage and configure plugins for extending DMS functionality": {
     "Manage and configure plugins for extending DMS functionality": "管理和配置插件以扩展 DMS 功能"
   },
+  "Manage up to 4 independent bar configurations. Each bar has its own position, widgets, styling, and display assignment.": {
+    "Manage up to 4 independent bar configurations. Each bar has its own position, widgets, styling, and display assignment.": ""
+  },
   "Manual Coordinates": {
     "Manual Coordinates": "手动设置坐标"
   },
@@ -1184,6 +1229,9 @@
   "Media Players (": {
     "Media Players (": "媒体播放器 ("
   },
+  "Media Volume OSD": {
+    "Media Volume OSD": ""
+  },
   "Memory": {
     "Memory": "内存"
   },
@@ -1198,6 +1246,9 @@
   },
   "Microphone Mute OSD": {
     "Microphone Mute OSD": "OSD麦克风静音"
+  },
+  "Middle Section": {
+    "Middle Section": ""
   },
   "Minimal palette built around a single hue.": {
     "Minimal palette built around a single hue.": "围绕单一色调构建的简约配色。"
@@ -1670,6 +1721,9 @@
   "Save Notepad File": {
     "Save Notepad File": "保存便签"
   },
+  "Save password": {
+    "Save password": ""
+  },
   "Saved": {
     "Saved": "已保存"
   },
@@ -1828,6 +1882,9 @@
   },
   "Show on-screen display when idle inhibitor state changes": {
     "Show on-screen display when idle inhibitor state changes": "当空闲抑制状态改变时显示OSD"
+  },
+  "Show on-screen display when media player volume changes": {
+    "Show on-screen display when media player volume changes": ""
   },
   "Show on-screen display when microphone is muted/unmuted": {
     "Show on-screen display when microphone is muted/unmuted": "当麦克风静音状态切换时显示OSD"
@@ -2051,6 +2108,9 @@
   "Toggle top bar visibility manually (can be controlled via IPC)": {
     "Toggle top bar visibility manually (can be controlled via IPC)": "手动切换顶栏可见性（可通过 IPC 控制）"
   },
+  "Toggle visibility of this bar configuration": {
+    "Toggle visibility of this bar configuration": ""
+  },
   "Tomorrow": {
     "Tomorrow": "明日"
   },
@@ -2240,11 +2300,20 @@
   "WiFi is off": {
     "WiFi is off": "Wi-Fi 已关闭"
   },
+  "Widget Background Color": {
+    "Widget Background Color": ""
+  },
   "Widget Management": {
     "Widget Management": "小组件管理"
   },
+  "Widget Style": {
+    "Widget Style": ""
+  },
   "Widget Styling": {
     "Widget Styling": "小组件样式"
+  },
+  "Widget Transparency": {
+    "Widget Transparency": ""
   },
   "Widgets": {
     "Widgets": "小组件"
@@ -2279,6 +2348,12 @@
   "You have unsaved changes. Save before opening a file?": {
     "You have unsaved changes. Save before opening a file?": "检测到未保存的更改，是否在打开文件前保存？"
   },
+  "custom theme file browser title": {
+    "Select Custom Theme": ""
+  },
+  "dark mode wallpaper file browser title | light mode wallpaper file browser title | wallpaper file browser title": {
+    "Select Wallpaper": ""
+  },
   "events": {
     "events": "事件"
   },
@@ -2291,8 +2366,20 @@
   "official": {
     "official": "官方"
   },
+  "profile image file browser title": {
+    "Select Profile Image": ""
+  },
+  "settings window title": {
+    "Settings": ""
+  },
+  "sysmon window title": {
+    "System Monitor": ""
+  },
   "update dms for NM integration.": {
     "update dms for NM integration.": "更新 DMS 以集成 NM"
+  },
+  "wallpaper directory file browser title": {
+    "Select Wallpaper Directory": ""
   },
   "• Install only from trusted sources": {
     "• Install only from trusted sources": "• 仅从可信来源安装"
