Update dms-cli for nightly builds

--- a/distro/ubuntu/dms-git/debian/changelog
+++ b/distro/ubuntu/dms-git/debian/changelog
@@ -1,5 +1,5 @@
-dms-git (0.6.2+git2094.6cc6e7c8ppa1) questing; urgency=medium
+dms-git (0.6.2+git2169.f7f1bbbdppa10) questing; urgency=medium
 
-  * Git snapshot (commit 2094: 6cc6e7c8)
+  * Git snapshot (commit 2169: f7f1bbbd)
 
- -- Avenge Media <AvengeMedia.US@gmail.com>  Sun, 23 Nov 2025 00:43:28 -0500
+ -- Avenge Media <AvengeMedia.US@gmail.com>  Wed, 26 Nov 2025 21:43:12 -0500
